# chess-bots-museum

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
src/chess_museum/core/: engine.py  evaluator.py
src/chess_museum/engines/turochamp/: __init__.py  engine.py  evaluate.py
src/chess_museum/search/: minimax.py
web/: biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx
web/src/components/: Board.tsx
web/src/hooks/: useChessGame.ts  usePyodide.ts
