[project]
name = "chess-museum"
version = "0.1.0"
description = "A museum of historic chess engines"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chess>=1.11.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.16",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["."]
